Make things English

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <a href="/" class="ui animated button rotateInDownRight" id='back'>
-        <div class="visible content">返回</div>
+        <div class="visible content">back</div>
         <div class="hidden content">
             <i class="left arrow icon"></i>
         </div>
